tests/e2e/semantics/list_nested2.error
Error: syntax error in story at line 4, column 5

4|    d = c + 1
          ^^^^^

E0103: `+` between `Map[string,List[List[int]]]` and `int` is not supported.
