tests/e2e/semantics/list_nested2.story
a = [1, 2]
b = [a, a]
c = {"foo": b}
d = c + 1
